--- a/views/location.ejs
+++ b/views/location.ejs
@@ -26,7 +26,7 @@
           food served at the conference will be provided from these establishments.
         </p>
 
-        <div id="locationIll">
+        <div class="imageFrame">
             <div class="images" id="locationimages" style="display: none;">
                 <a href="../gfx/venue_01.jpg" title="Previous picture" class="arrow prev">&lt;</a>
                 <img id="locationimg" src="../gfx/venue_01.jpg" class="slide focus" title="Venue picture" data-n="1" data-min="1" data-max="6" />
@@ -36,8 +36,8 @@
             <div id="locationmap"><div id="map" class="map"> </div></div>
         </div>
         <div id="locationTogler">
-            <a href="#locationimages">Images</a>
-            <a href="#locationmap">Map</a>
+            <a id="togleButtonImages" class="toglerButton" href="#locationimages"><span>Images</span></a>
+            <a id="togleButtonMap" class="toglerButton" href="#locationmap"><span>Map</span></a>
         </div>
 
         <div class="separator"></div>
@@ -123,15 +123,13 @@
           your room and into the venue. When booking your Web Rebels
           2013 ticket you will be given a discount code which can be
           used at this hotel.
-          <!--a href="http://www.scandichotels.no/Hotels/Countries/Norge/Oslo/Hotels/Vulkan/#.UR6ROqvipms">Hotel website.</a-->
         </p>
 
         <strong><a href="http://www.pshotell.no/">PS:Hotell</a></strong>
         <p>
           We're also happy that there is a cheaper hotel at the
           premises, just 20-30m from the venue, which has extremely
-          low prices. <!--a href="http://www.pshotell.no/">Hotel
-          website</a-->
+          low prices.
         </p>
 
         <strong><a href="http://www.comforthotelxpress.no/">Comfort Hotel xPress Oslo</a></strong>
@@ -142,13 +140,12 @@
           <a href="https://www.google.com/maps?q=m%C3%B8llergata+26+oslo&hl=no&ie=UTF8&sll=61.143235,9.09668&sspn=0.007953,0.018969&z=16">heart
           of rock'n roll Oslo</a> and still within decent walking
           distance of the venue. Free wifi, naturally.
-          <!--a href="http://www.comforthotelxpress.no/">Hotel website</a-->
         </p>
         
         <div class="separator"></div>
         <h2>Splurge</h2>
         <p>
-          If your company's paying anyway why not splurge. Unlike most other things in Norway, hotels in Oslo are
+          If your company's paying anyway why not splurge? Unlike most other things in Norway, hotels in Oslo are
           surprisingly cheap. You can stay at the 5 star
           <a href="http://www.radissonblu.com/plazahotel-oslo">Radisson
           BLU Plaza</a>, located in the heart of the city, right next
