--- a/views/snips/footer.ejs
+++ b/views/snips/footer.ejs
@@ -13,3 +13,8 @@
         </aside>
     </div>
 </footer>
+<div id="surprompen">
+    <h1>Seriously: upgrade to the newest version of your browser.<br>It will do you good!</h1>
+    <p>Click to try anyway...</p>
+</div>
+<script src="/js/script.js"></script>
