--- a/views/frontpage.ejs
+++ b/views/frontpage.ejs
@@ -43,7 +43,7 @@
       <article class="slot row_b">
         <a href="/speakers/#mario">
           <div class="img" style="background-image: url(/gfx/front_mario.jpg);"></div>
-          <h2>Dr.-Ing. Mario Heiderich</h2>
+          <h2>Dr. Mario Heiderich</h2>
         </a>
       </article>
 
