adding sposors to the footer

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -372,8 +372,31 @@ article ul {
     padding: 0 2em 1em 2em;
 }
 
-
-
+.sponsors a {
+    display: block;
+    width: 102px;
+    height: 80px;
+    border: 1px solid rgb(140, 140, 140);
+    background-color: rgb(255, 255, 255) !important;
+    border-right: 14px 12px;
+    float: left;
+    margin-right: 2px;
+}
+.sponsor.kodemaker {
+    background: url("/gfx/sponsors/sponsor-kodemaker.png") no-repeat ;
+    background-position: 2px 30px;
+}
+.sponsor.finn {
+    background: url("/gfx/sponsors/sponsor-finn.png") no-repeat;
+    background-position: 2px 23px;
+}
+.sponsor.arktekk {
+    background: url("/gfx/sponsors/sponsor-arktekk.png") no-repeat;
+}
+.sponsor.bekk {
+    background: url("/gfx/sponsors/sponsor-bekk.png") no-repeat;
+    background-position: 2px 23px;
+}
 @media screen and (max-width: 720px) {
     .page .logo, .page .menu, .page .wrap, .page .foot {
         width: auto;
