--- a/views/snips/footer.ejs
+++ b/views/snips/footer.ejs
@@ -1,7 +1,10 @@
 <footer class="foot">
     <div class="footContainer">
-        <section>
-            <!-- Sponsors goes here -->
+        <section class="sponsors">
+            <a class="sponsor kodemaker" href="http://kodemaker.no"></a>
+            <a class="sponsor arktekk" href="http://arktekk.no"></a>
+            <a class="sponsor finn" href="http://finn.no"></a>
+            <a class="sponsor bekk" href="http://bekk.no"></a>
         </section>
 
         <aside>
