--- a/views/snips/footer.ejs
+++ b/views/snips/footer.ejs
@@ -1,6 +1,8 @@
 <footer class="foot">
     <div class="footContainer">
+
         <section class="sponsors">
+        <p>Love to our sponsors:</p>
             <a class="sponsor kodemaker" href="http://kodemaker.no"></a>
             <a class="sponsor arktekk" href="http://arktekk.no"></a>
             <a class="sponsor finn" href="http://finn.no"></a>
