--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -53,7 +53,7 @@
 
 
 
-        <table class="schedule" id="dayII">
+        <table class="schedule" id="dayI">
             <tr>
                 <th colspan="3">23rd of May - Conference Day I</th>
             </tr>
@@ -124,9 +124,9 @@
             </tr>
         </table>
 
-        <table class="schedule" id="dayIII">
+        <table class="schedule" id="dayII">
             <tr>
-                <th colspan="3">24th of May - Conference Day I</th>
+                <th colspan="3">24th of May - Conference Day II</th>
             </tr>
             <tr>
                 <td class="time">08:00</td>
