--- a/views/sponsoroptions.ejs
+++ b/views/sponsoroptions.ejs
@@ -1,4 +1,17 @@
-<% include snips/head.ejs %>
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" id="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,initial-scale=1.0">
+    <link href='http://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="/css/style.css">
+    <title><%=pageTitle%></title>
+    <% include snips/analytics.ejs %>
+</head>
+<body class="page">
+
+  <% include snips/logo.ejs %>
+  <% include snips/menu.ejs %>
 
 <article class="wrap">
     <h1>Sponsorship options</h1>
@@ -74,4 +87,8 @@
       <a href="mailto:sponsors[ replace this bracket with a @]webrebels.org&gt;">contact us today</a>.
     </p>
 </article>
-<% include snips/footer.ejs %>
+
+    <% include snips/footer.ejs %>
+
+</body>
+</html>
