--- a/views/tickets.ejs
+++ b/views/tickets.ejs
@@ -1,4 +1,17 @@
-<% include snips/head.ejs %>
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" id="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,initial-scale=1.0">
+    <link href='http://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="/css/style.css">
+    <title><%=pageTitle%></title>
+    <% include snips/analytics.ejs %>
+</head>
+<body class="page">
+
+  <% include snips/logo.ejs %>
+  <% include snips/menu.ejs %>
 
     <article class="wrap">
         <h1>Tickets</h1>
@@ -31,6 +44,8 @@
           brewery beers (just checkout the <a href="http://webrebels.tumblr.com/post/24346798911/were-doing-the-accounting-thing-these-days-and">selection of beverages consumed at last years party</a>), wine or mineral water.
         </p>
     </article>
+
     <% include snips/footer.ejs %>
+
 </body>
 </html>
