--- a/views/openmic.ejs
+++ b/views/openmic.ejs
@@ -8,7 +8,7 @@
     <title><%=pageTitle%></title>
     <% include snips/analytics.ejs %>
 </head>
-<body class="page">
+<body>
 
     <% include snips/logo.ejs %>
     <% include snips/menu.ejs %>
