--- a/views/frontpage.ejs
+++ b/views/frontpage.ejs
@@ -8,22 +8,20 @@
     <title><%=pageTitle%></title>
     <% include snips/analytics.ejs %>
 </head>
-<body class="page">
+<body>
 
   <% include snips/logo.ejs %>
   <% include snips/menu.ejs %>
 
     <section class="wrap">
+
       <article id="poster" class="poster">
         <h1>All web, all the time</h1>
         <h2>23rd - 24th of May</h2>
         <h3>Oslo Norway</h3>
       </article>
-    </section>
 
-    <div class="separator"></div>
-
-    <section class="wrap">
+      <div class="separator"></div>
 
       <article class="slot row_a">
         <a href="/speakers/#bodil">
@@ -67,91 +65,80 @@
         </a>
       </article>
 
-      <article class="slot row_a">
+      <article class="slot row_a tba">
         <a href="/speakers/#">
-          <div class="img tba"></div>
+          <div class="img"></div>
           <h2>tba</h2>
         </a>
       </article>
 
-      <article class="slot row_b">
+      <article class="slot row_b tba">
         <a href="/speakers/#">
-          <div class="img tba"></div>
+          <div class="img"></div>
           <h2>tba</h2>
         </a>
       </article>
 
-      <article class="slot row_c">
+      <article class="slot row_c tba">
         <a href="/speakers/#">
-          <div class="img tba"></div>
+          <div class="img"></div>
           <h2>tba</h2>
         </a>
       </article>
 
-      <article class="slot row_a">
+      <article class="slot row_a tba">
         <a href="/speakers/#">
-          <div class="img tba"></div>
+          <div class="img"></div>
           <h2>tba</h2>
         </a>
       </article>
 
-      <article class="slot row_b">
+      <article class="slot row_b tba">
         <a href="/speakers/#">
-          <div class="img tba"></div>
+          <div class="img"></div>
           <h2>tba</h2>
         </a>
       </article>
 
-      <article class="slot row_c">
+      <article class="slot row_c tba">
         <a href="/speakers/#">
-          <div class="img tba"></div>
+          <div class="img"></div>
           <h2>tba</h2>
         </a>
       </article>
 
-      <article class="slot row_a">
+      <article class="slot row_a tba">
         <a href="/speakers/#">
-          <div class="img tba"></div>
+          <div class="img"></div>
           <h2>tba</h2>
         </a>
       </article>
 
-      <article class="slot row_b">
+      <article class="slot row_b tba">
         <a href="/speakers/#">
-          <div class="img tba"></div>
+          <div class="img"></div>
           <h2>tba</h2>
         </a>
       </article>
 
-      <article class="slot row_c">
+      <article class="slot row_c tba">
         <a href="/speakers/#">
-          <div class="img tba"></div>
+          <div class="img"></div>
           <h2>tba</h2>
         </a>
       </article>
 
-      <article class="slot row_d">
+      <article class="slot row_d tba">
         <a href="/speakers/#">
-          <div class="img tba"></div>
+          <div class="img"></div>
           <h2>tba</h2>
         </a>
       </article>
 
     </section>
 
-    <script>
-      (function(){
-        function randomImg() {
-          var imgs  = ['b0','b1','b2','b3','b4','b5','b6','b7','b8','b9','b10','b11', 'b12'],
-            random  = Math.floor(Math.random() * ((imgs.length - 1) - 0 + 1) + 0);
-          return imgs[random];
-        }
-        var poster = document.getElementById('poster');
-        poster.setAttribute('style', 'background-image: url("../gfx/' + randomImg() + '.jpg");');
-      }());
-    </script>
-
     <% include snips/footer.ejs %>
+    <script src="/js/frontpage.js"></script>
 
 </body>
 </html>
