--- a/views/location.ejs
+++ b/views/location.ejs
@@ -8,7 +8,7 @@
     <title><%=pageTitle%></title>
     <% include snips/analytics.ejs %>
 </head>
-<body class="page">
+<body>
 
   <% include snips/logo.ejs %>
   <% include snips/menu.ejs %>
@@ -176,7 +176,6 @@
     </article>
 
     <% include snips/footer.ejs %>
-
     <script src="/js/location.js"></script>
 
 </body>
